--- a/07-flex-layout-2.css
+++ b/07-flex-layout-2.css
@@ -2,28 +2,69 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
   
   .header {
     height: 72px;
     background: darkmagenta;
     color: white;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    font-size: 32px;
+    font-weight: 900;
+    padding: 16px;
   }
-  
-  .footer {
-    height: 72px;
-    background: #eee;
-    color: darkmagenta;
+
+  .section {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
   }
-  
+
+  ul {
+    list-style:none;
+  }
+  a {
+    text-decoration: none;
+    font-size: 24px;
+    color: white;
+  }
+
+  .sidebar li {
+    margin-bottom: 20px;
+  }
+
+
   .sidebar {
+    display: flex;
     width: 300px;
     background: royalblue;
     box-sizing: border-box;
+    flex-shrink: 0;
+  }
+
+  .card-body {
+    display: flex;
+    padding: 32px;
+    flex-wrap: wrap;
   }
   
   .card {
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
+    padding: 32px;
+    margin: 20px;
+    width: 200px;
+  }
+  .footer {
+    height: 72px;
+    background: #eee;
+    color: darkmagenta;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
